syntax = "proto3";
package helloworld;

option java_multiple_files = true;

option java_package = "io.github.viakiba.hinx.generate.grpc";
option java_outer_classname = "GreetingService";

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}